test/syntaxerrors/TestMissingRBraceMissingSemicolon.jdc
int i = 10

void increment(int i) {
    if (i < 10) {
    i++;
}